--- a/TODO.org
+++ b/TODO.org
@@ -51,6 +51,8 @@
 27. [X] FileWatcher
 28. [X] Add file operation cancel UI
 29. [ ] Select renamed file after renaming
-30. [ ] Rename consider only marks here and not the global marks by default
+30. [X] Rename consider only marks here and not the global marks by default
 31. [ ] Undo Operations
 32. [ ] Show search match count
+33. [ ] Mouse scroll for folder
+34. [ ] Search bug
