Added keybindings and updated wiki

--- a/wiki.org
+++ b/wiki.org
@@ -39,11 +39,8 @@ where =mark= would mark the current item under focus or highlighted
 items (more than one items).
 
 ** Types of Command
-There are three variants for most of the commands: =Current=, =Local=
-and =Global=. If any interactive command has scope available, they are
-named accordingly. For example, the =rename= command is actually the
-=Current= scoped command. It's other variants are =rename-local= and
-=rename-global= for =Local= and =Global= scope respectively.
+There are four variants for most of the commands: =Current=, =Local=
+and =Global= and =DWIM= (Do What I Mean).
 
 *** Current Scope
 This applies to the currently selected item. Any command that is
@@ -65,53 +62,49 @@ that are present in any directory.
 
 *This does not include mouse highlighting*.
 
+*** DWIM
+
+[[https://en.wikipedia.org/wiki/DWIM][DWIM wikipedia page]]
+
+Do What I Mean version of commands. If no local marks are present, run the command on the current item, otherwise run the commands on the marks.
+
 * Commands List
 Below is an exhaustive list of commands that are currently available in
-Navi. The default keybindings associated with them are mentioned. Below
-is a mapping of what some keys mean.
-
-1. =C= - Control
-2. =M= - Meta (Alt Key)
-3. =S= - Shift
-4. =SPC= - Space
+Navi.
 
 ** Marking Item
-
 *** mark
 Marks the current item.
 
 *** toggle-mark
 Toggle the mark of the current item.
 
-Default keybinding: =SPC=
-
 *** mark-all
 Marks all the items in the current directory.
-
-Default keybinding: =C-a=
 
 *** mark-inverse
 Inverses the marks in the current directory.
 
-Default keybinding: =S-SPC=
+*** mark-dwim
+
+DWIM version of =toggle-mark=
 
 ** Unmarking Item
-
 *** unmark
 Unmarks the current item.
 
 *** unmark-local
 =unmark= for *Local Marks*
 
-Default keybinding: =S-u=
-
 *** unmark-global
 =unmark= for *Global Marks*
 
-Default keybinding: =C-S-u=
+** Selecting Item
+*** visual-select
+
+Enters into /visual selection/ mode. Navigation is followed by selection until the mode is toggled off.
 
 ** Change Permission
-
 *** chmod
 Change the permission of the current item using three digit numbers
 
@@ -123,16 +116,14 @@ Similar to =chmod= for *Local Marks*
 *** chmod-global
 Similar to =chmod= for *Global Marks*
 
+*** chmod-dwim
 ** Renaming Files
 *NOTE: Renaming more than one item leads to /bulk renaming/. This is
 where a text editor of your choice (set it in the configuration) opens
 up a temporary "rename file" and enables you to rename all the marked
 files once you save and close the said "rename file"*
-
 *** rename
 Rename the highlighted item.
-
-Default keybinding: =S-r=
 
 *** rename-local
 =rename= for *Local Marks*
@@ -140,25 +131,20 @@ Default keybinding: =S-r=
 *** rename-global
 =rename= for *Global Marks*
 
+*** rename-dwim
 ** Cutting Files
-
 *** cut
 Cut (prepare for moving) the current item.
-
-Default keybinding: =C-x=
 
 *** cut-local
 =cut= for *Local Marks*
 
 *** cut-global
 =cut= for *Global Marks*
-
+*** cut-dwim
 ** Copying Files
-
 *** copy
 Copy the current item.
-
-Default keybinding: =C-c=
 
 *** copy-local
 =copy= for *Local Marks*
@@ -166,15 +152,12 @@ Default keybinding: =C-c=
 *** copy-global
 =copy= for *Global Marks*
 
+*** copy-dwim
 ** Pasting (Moving) Files
-
 *** paste
 Paste (Move) the current item.
 
-Default keybinding: =p=
-
 ** Deleting Files
-
 *** delete
 Delete the highlighted items(s).
 
@@ -182,51 +165,36 @@ Delete the highlighted items(s).
 the items, it directly deletes them. If you want to trash use the
 /trash/ command*
 
-Default keybinding: =S-d=
-
 *** delete-local
 =delete= for *Local Marks*
 
 *** delete-global
 =delete= for *Global Marks*
 
+*** delete-dwim
 ** Trashing Files
-
 *** trash
 Trash the current item.
-
-Default keybinding: =S-t=
 
 *** trash-local
 =trash= for *Local Marks*
 
-Default keybinding: =S-t=
-
 *** trash-global
 =trash= for *Global Marks*
 
-Default keybinding: =S-t=
-
-** filter
+*** trash-dwim
+** Filtering Items
+*** filter
 Set a filter to directory.
 
 Example: =*= displays everything, =*.csv= displays only the csv files,
 =*.png= displays only the png files
 
-** unfilter
+*** reset-filter
 Reset the appplied filter.
 
-** refresh
-Force refresh the current directory.
-
-*NOTE: By default, Navi watches the directory for changes and loads
-them, so there is no requirement to refresh the directory. This command
-is there just in case something does not look right.*
-
-** hidden-files
+*** hidden-files
 Toggles the hidden files.
-
-Default keybinding: =C-h=
 
 NOTE: Hidden files are those items whose name start with a period like
 =.config=, =.gitignore= etc.
@@ -245,24 +213,26 @@ Opens the messages list.
 *** preview-pane
 Toggles the preview pane.
 
-Default keybinding: =C-p=
-
 The preview pane handles previewing images (good number of formats) and
 PDF documents (first page) =asynchronously=. This means that the
 previewing experience will be seamless and without any lag. Navi uses
 =ImageMagick= library under the hood for previewing images and therefore
 any image formats supported my ImageMagick is supported by Navi.
 
+*** shortcuts-pane
+
+This displays the list of all the shortcuts that have been assigned.
+
 ** Misc
+*** execute-extended-command
+
+This is the function that pops up the inputbar to enter the interactive commands.
+
 *** menu-bar
 Toggles the menu bar.
 
-Default keybinding: =C-m=
-
 *** focus-path
 Focuses the path widget and sets it in edit mode.
-
-Default keybinding: =C-l=
 
 *** item-property
 Display the property of the currently focused item.
@@ -274,6 +244,13 @@ Toggle the display of header information.
 *** toggle-cycle
 
 Toggle the cycle (last item to first item and vice-versa) during navigation.
+
+*** refresh
+Force refresh the current directory.
+
+*NOTE: By default, Navi watches the directory for changes and loads
+them, so there is no requirement to refresh the directory. This command
+is there just in case something does not look right.*
 
 ** Shell Commands
 *** TODO shell-command
@@ -324,17 +301,11 @@ the file that you want to look for.
 *** search
 Searches the current directory for the search term
 
-Default Keybinding: =/=
-
 *** search-next
 Goes to the next best match for the search term
 
-Default Keybinding: =n=
-
 *** search-prev
 Goes to the previous best match for the search term
-
-Default Keybinding: =S-n=
 
 ** Sorting Items
 
@@ -445,6 +416,7 @@ keybindings = {
     { key = "j", command = "next-item", desc = "Go to the next item" },
     { key = "k", command = "prev-item", desc = "Go to the previous item" },
     { key = "l", command = "select-item", desc = "Select item" },
+    { key = "f", command = "filter", desc = "Filter item visibility" },
     { key = "g,g", command = "first-item", desc = "Go to the first item" },
     { key = "z,z", command = "middle-item", desc = "Go to middle item" },
     { key = "Shift+g", command = "last-item", desc = "Go to the last item" },
@@ -453,10 +425,11 @@ keybindings = {
     { key = "Space", command = "toggle-mark", desc = "Mark item(s)" },
     { key = "F5", command = "refresh", desc = "Refresh current directory" },
     { key = "Shift+Space", command = "mark-inverse", desc = "Mark inverse item(s)" },
-    { key = ":", command = "mark-inverse", desc = "Mark inverse item(s)" },
+    { key = "Shift+v", command = "visual-select", desc = "Visual selection mode" },
+    { key = ":", command = "execute-extended-command", desc = "Execute extended command" },
     { key = "y,y", command = "copy-dwim", desc = "Copy item(s)" },
     { key = "p", command = "paste", desc = "Paste item(s)" },
-    { key = "Shift+u", command = "unmark-dwim", desc = "Unmark item(s)" },
+    { key = "Shift+u", command = "unmark-local", desc = "Unmark all item(s)" },
     { key = "/", command = "search", desc = "Search (regex)" },
     { key = "n", command = "search-next", desc = "Search next" },
     { key = "Shift+n", command = "search-prev", desc = "Search previous" },
